# garmin-ble

./: .gitignore  README.md  ROADMAP.md  garmin_cobs.py  pyproject.toml
.github/workflows/: auto_release.yml  publish.yml  test.yml
data/: desk_stationary_facing_down.json  floor_stationary_facing_down.json  holding_hand_facing_up.json
examples/: accelerometer.py  accelerometer_3d.py  accelerometer_test.py  accelerometer_test_2.py  device_state.py  full_demo.py  full_walkthrough.py  main.py  telemetry_advanced.py  telemetry_basic.py
garmin_ble/: __init__.py  client.py  cobs.py  constants.py  crc.py  gfdi.py  logging.py
garmin_ble/client/: __init__.py  auto.py  base.py
garmin_ble/parsers/: garmin_json.py  protobuf_handler.py
garmin_ble/parsers/telemetry/: __init__.py  accel.py  body_battery.py  calories.py  hr.py  hrv.py  intensity.py  respiration.py  spo2.py  steps.py  stress.py
garmin_ble/protobuf/: garmin_contacts_pb2.py  gdi_app_config_service_pb2.py  gdi_authentication_service_pb2.py  gdi_calendar_service_pb2.py  gdi_core_pb2.py  gdi_data_transfer_service_pb2.py  gdi_device_status_pb2.py  gdi_ecg_service_pb2.py  gdi_file_sync_service_pb2.py  gdi_find_my_watch_pb2.py  gdi_http_service_pb2.py  gdi_installed_apps_service_pb2.py  gdi_notifications_service_pb2.py  gdi_settings_service_pb2.py  gdi_smart_proto_pb2.py  gdi_sms_notification_pb2.py
proto/: garmin_contacts.proto  gdi_app_config_service.proto  gdi_authentication_service.proto  gdi_calendar_service.proto  gdi_core.proto  gdi_data_transfer_service.proto  gdi_device_status.proto  gdi_ecg_service.proto  gdi_file_sync_service.proto  gdi_find_my_watch.proto  gdi_http_service.proto  gdi_installed_apps_service.proto  gdi_notifications_service.proto  gdi_settings_service.proto  gdi_smart_proto.proto  gdi_sms_notification.proto
reverse_engineering/accelerometer/: rev_eng.md  reverse_eng.py  testing.py
reverse_engineering/accelerometer/data/: analyze.py  desk_stationary_facing_up.json  floor_stationary_facing_up.json  full_output.txt  holding_in_hand_tilting_to_left_45_deg.json  holding_in_hand_tilting_to_right_45_deg.json  shaking.json  test_12bit.py  watch_against_wall_45_deg_right_desk.json
tests/: conftest.py  test_core.py
tests/client/: test_accelerometer.py  test_connect.py  test_gfdi_routing.py  test_handshake.py  test_lifecycle.py  test_telemetry.py
tests/helpers/: test_constants.py
tests/protocol/: test_cobs.py  test_crc.py  test_garmin_json.py  test_gfdi.py  test_protobuf_handler.py
