[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin_ble"
version = "0.1.0"
description = "A Python library for interacting with Garmin proprietary BLE protocols."
readme = "README.md"
authors = [
    { name = "Gabriel Werneck" }
]
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.21.0",
    "protobuf>=4.0.0"
]
license = { text = "AGPL-3.0-only" }

[project.urls]
Homepage = "https://github.com/gabrielwerneck/garmin-ble"
Repository = "https://github.com/gabrielwerneck/garmin-ble"

[tool.setuptools]
packages = ["garmin_ble", "garmin_ble.protobuf"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
